chore: change uri /transaction to /transactions
RG-6809
